fixed speaker page on smaller devices

--- a/speakers-style.css
+++ b/speakers-style.css
@@ -67,7 +67,7 @@ p {
 }
 
 ul {
-    padding: 0;
+        margin-top: 62px;
 }
 
 a {
@@ -141,7 +141,7 @@ a {
 
 .hamburger-nav li {
     list-style: none;
-    margin: 40px 0;
+      margin-top: 26px;
 }
 
 #hamburger-container {
@@ -823,7 +823,7 @@ position: absolute;
     }
     
     .white-right-col {
-        height: 100vh;
+        height: 100%;
     }
     
     .logo-wrapper svg {
