--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 
 ul {
     padding: 0;
+    margin-top: 62px;
 }
 
 a {
@@ -135,7 +136,7 @@ a {
 
 .hamburger-nav li {
     list-style: none;
-    margin: 40px 0;
+    margin-top: 26px;
 }
 
 #hamburger-container {
